# V-Qualia

./: .gitignore  README.md  SETUP_GUIDE.md  deploy.sh  env.example  main.py  progress.txt  requirements.txt  test_api.py
ai/: vectorizer.py
backend/: .gitignore  main.py  prediction_engine.py  requirements.txt
backend/data/cars/: F2.json  SAE.json  f1_2025.json
backend/data/predictions/: .gitkeep  F1_2025_Nuerburgring_20251011_210959.csv  F1_2025_Zandvoort_20251011_203513.csv  F2_Zandvoort_20251011_210325.csv  F2_montreal_20251011_204903.csv  SAE_Nuerburgring_20251011_205802.csv  SAE_Zandvoort_20251011_210105.csv
backend/data/tracks/: .gitkeep
backend/engine/: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  build_msys2.sh
backend/engine/include/data/: SimulationState.h  TrackData.h  VehicleParams.h
backend/engine/include/io/: JSONParser.h
backend/engine/include/physics/: AerodynamicsModel.h  PowertrainModel.h  TireModel.h
backend/engine/include/solver/: GGVGenerator.h  QuasiSteadyStateSolver.h
backend/engine/include/telemetry/: TelemetryLogger.h
backend/engine/src/: main.cpp
backend/engine/src/data/: SimulationState.cpp  TrackData.cpp  VehicleParams.cpp
backend/engine/src/io/: JSONParser.cpp
backend/engine/src/physics/: AerodynamicsModel.cpp  PowertrainModel.cpp  TireModel.cpp
backend/engine/src/solver/: GGVGenerator.cpp  QuasiSteadyStateSolver.cpp
backend/engine/src/telemetry/: TelemetryLogger.cpp
dashboard/: LICENSE-MIT  NOTICE
database/: qdrant_service.py
f1_cache/: fastf1_http_cache.sqlite
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/components/charts/: AeroForcesChart.jsx  CorneringAnalysisChart.jsx  DrivingStylePanel.jsx  GForceTraceChart.jsx  GForceVsSpeedChart.jsx  GearUsageChart.jsx  RpmGearChart.jsx  SpeedDistributionChart.jsx  SpeedOverDistanceChart.jsx  SteeringTraceChart.jsx  (+4 more)
frontend/src/styles/: index.css
frontend/src/utils/: api.js  csvParser.js  defaultData.js  telemetryCalculations.js  toast.js
services/: f1_fetcher.py  telemetry_processor.py
(+20 files in other folders)
